Agregando conexion string

--- a/AVONmo/appsettings.json
+++ b/AVONmo/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AvonConnection": "Server=avonmo-server.database.windows.net,1433;Database=avonmo-database;User=avonmo-server-admin;Password=03RFMD6NS6W167L5$"
+  }
 }
